# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

set(_deserializers_out
    "${CMAKE_BINARY_DIR}/python/hololink_module/sensors/deserializers")
file(MAKE_DIRECTORY "${_deserializers_out}")

configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/__init__.py"
    "${_deserializers_out}/__init__.py" COPYONLY)

add_subdirectory(max96716a)
